manifests/service.yml
apiVersion: v1
kind: Service
metadata:
   name: ycnbot
spec:
   type: ClusterIP
   ports:
   - port: 80
   selector:
       app: ycnbot
