manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ycnbot
 annotations:
nginx.ingress.kubernetes.io/rewrite-target: /
nginx.ingress.kubernetes.io/use-regex: "true"
nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
cert-manager.io/cluster-issuer: letsencrypt
spec:
 ingressClassName: nginx
 tls:
 - hosts:
   - <host_name>
   secretName: <secret_name>
 rules:
 - host: <host_name>
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: ycnbot
           port:
             number: 80
